resolved comment: aligned modal to first letter of workspace name and removed unwanted code

--- a/packages/main/src/components/protected/sidebar/styles/ModalComponentStyles.module.css
+++ b/packages/main/src/components/protected/sidebar/styles/ModalComponentStyles.module.css
@@ -20,7 +20,7 @@
   position: fixed;
   top: inherit;
   margin-top: -0.2rem;
-  left: 1rem;
+  left: 1.2rem;
   width: 100%;
   max-width: 281px;
   border: 1px solid #bebebe;
